fix(styles): spacing

--- a/src/pages/Login/styles.module.css
+++ b/src/pages/Login/styles.module.css
@@ -41,7 +41,7 @@
 
 .authors {
   color: white;
-  padding: 20px 0;
+  margin-top: 40px;
 }
 
 .authors a {
